--- a/01 - JavaScript Drum Kit/styles.css
+++ b/01 - JavaScript Drum Kit/styles.css
@@ -1,6 +1,6 @@
 html {
 	font-size: 10px;
-	background: url(./img/background.jpg) bottom center;
+	background: url(./img/background.jpg) center;
 	background-size: cover;
 }
 
@@ -13,10 +13,14 @@ html {
 
 .keys {
 	display: flex;
+	flex-wrap: wrap;
 	flex: 1;
 	min-height: 100vh;
+	max-width: 960px;
+	margin: auto;
 	align-items: center;
 	justify-content: center;
+	align-content: center;
 }
 
 .key {
@@ -25,7 +29,7 @@ html {
 	margin: 1rem;
 	font-size: 1.5rem;
 	padding: 1rem 0.5rem;
-	transition: all 0.07s ease;
+	transition: all 0.01s ease;
 	width: 10rem;
 	text-align: center;
 	color: white;
@@ -49,4 +53,13 @@ kbd {
 	text-transform: uppercase;
 	letter-spacing: 0.1rem;
 	color: #ffc600;
+}
+
+h1 {
+	display: block;
+	width: 100%;
+	text-align: center;
+	font-size: 6rem;
+	color: white;
+	text-shadow: 0px 1px 10px black;
 }
