--- a/02 - JS and CSS Clock/style.scss
+++ b/02 - JS and CSS Clock/style.scss
@@ -3,15 +3,19 @@
 	margin: 0;
 	box-sizing: border-box;
 }
+body {
+	background: url(./img/bg.jpg) no-repeat center center fixed;
+	background-size: cover;
+}
 .container {
 	border: 1vw solid black;
-	width: 80%;
-	height: 80%;
+	width: 40%;
 	margin: 3% auto;
 	position: relative;
 	border-radius: 50%;
 	padding: 4vw;
-	box-shadow: 1.5vw 1.5vw 2vw 0 rgba(0, 0, 0, 0.2), inset 0.5vw 0.5vw 0.5vw 0 rgba(0, 0, 0, 0.2);
+	box-shadow: 1.5vw 2vw 1.5vw 0 rgba(0, 0, 0, 0.4), inset 0.5vw 0.5vw 0.5vw 0 rgba(0, 0, 0, 0.2);
+	background-color: #fff;
 }
 
 .container img {
